--- a/BusBoard/frontend/index.html
+++ b/BusBoard/frontend/index.html
@@ -6,15 +6,16 @@
     <link rel="stylesheet" href="styles.css">
     <script src="departures.js"></script>
   </head>
-  <body>
+  <body class='snow'>
     <h1>BusBoard</h1>
     <form action="javascript:void(0)" onsubmit="buttonSubmit();">
-        Postcode:<br>
-        <input type="text" name="postcode" id="postcode">
-        <input type="submit" value="Submit">
+        Please enter a Postcode: 
+        <input type="text" name="postcode" id="postcode" placeholder='Postcode'>
+        <input type="submit" value="Submit" id='button'>
     </form>
     <div id="results">
-        <h2>Please enter a Postcode</h2>
     </div>
+    <br>
+    <A HREF="/history.html">Bus History</A>
   </body>
 </html>
